2012-09-28  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: make HashSet memory instrumentation non-intrusive
        https://bugs.webkit.org/show_bug.cgi?id=97879

        Reviewed by Vsevolod Vlasov.

        Update the test for HashSet memory instrumentation. We don't add
        HashSet's private objects into the set of visited objects any more
        and should update the expectation accordingly.

        * tests/MemoryInstrumentationTest.cpp:
        (WebCore::TEST):

2012-09-27  Kent Tamura  <tkent@chromium.org>

        Use Localizer in PagePopupController
        https://bugs.webkit.org/show_bug.cgi?id=97862

        Reviewed by Hajime Morita.

        We need to implement PagePopupClient::localizer. The current
        implementations of localizer functions always return Localizer objects
        for the browser locale. It's ok because other locale-dependent stuff in
        PagePopup uses the browser locale, not element locale. We might want to
        update this behavior later for testing i18n behavior in PagePopup.

        * src/ColorChooserUIController.cpp:
        (WebKit::ColorChooserUIController::ColorChooserUIController):
        Initialize m_localizer with the browser default locale.
        (WebKit::ColorChooserUIController::localizer):
        Returns m_localizer.
        * src/ColorChooserUIController.h:
        (ColorChooserUIController): Declare localizer function and m_localizer.

        * src/DateTimeChooserImpl.cpp:
        (WebKit::DateTimeChooserImpl::DateTimeChooserImpl):
        Initialize m_localizer with the browser default locale.
        (WebKit::DateTimeChooserImpl::localizer):
        Returns m_localizer.
        * src/DateTimeChooserImpl.h:
        (DateTimeChooserImpl): Declare localizer function and m_localizer.

2012-09-28  Kent Tamura  <tkent@chromium.org>

        Switch monthLabels, weekDayShortLabels, and firstDayOfWeek to Localizer
        https://bugs.webkit.org/show_bug.cgi?id=97874
